--- a/cdk-tools/pom.xml
+++ b/cdk-tools/pom.xml
@@ -210,6 +210,11 @@
       <artifactId>hadoop-client</artifactId>
       <scope>compile</scope>
     </dependency>
+    <dependency> <!-- for webhdfs client -->
+      <groupId>org.apache.hadoop</groupId>
+      <artifactId>hadoop-hdfs</artifactId>
+      <scope>compile</scope>
+    </dependency>
     <dependency>
       <groupId>org.apache.crunch</groupId>
       <artifactId>crunch-core</artifactId>
